; ModuleID = '/home/carl/AnghaBench/stb/extr_stb_vorbis.c_stb_vorbis_open_file.c'
source_filename = "/home/carl/AnghaBench/stb/extr_stb_vorbis.c_stb_vorbis_open_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_END = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @stb_vorbis_open_file(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @ftell(i32* %11)
  store i32 %12, i32* %10, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @SEEK_END, align 4
  %15 = call i32 @fseek(i32* %13, i32 0, i32 %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @ftell(i32* %16)
  %18 = load i32, i32* %10, align 4
  %19 = sub i32 %17, %18
  store i32 %19, i32* %9, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* @SEEK_SET, align 4
  %23 = call i32 @fseek(i32* %20, i32 %21, i32 %22)
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* %9, align 4
  %29 = call i32* @stb_vorbis_open_file_section(i32* %24, i32 %25, i32* %26, i32* %27, i32 %28)
  ret i32* %29
}

declare dso_local i32 @ftell(i32*) #1

declare dso_local i32 @fseek(i32*, i32, i32) #1

declare dso_local i32* @stb_vorbis_open_file_section(i32*, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
